<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/full_screen"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/full_screen"/>

    <item
        android:id="@+id/seek_to_live"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/seek_to_live"/>

    <item
        android:id="@+id/ad_click"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/ad_click"/>

    <item
        android:id="@+id/ad_skip"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/ad_skip"/>

    <item
        android:id="@+id/ads_skip"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/ads_skip"/>

</menu>
